change secrets in publish-npm.yaml

--- a/.github/workflows/publish-npm.yaml
+++ b/.github/workflows/publish-npm.yaml
@@ -46,4 +46,4 @@ jobs:
           git commit -m "Update addresses v$VERSION"
           git push
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITGUARDIAN_API_KEY }}
